infra/k8s/delivery-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-delivery-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-delivery
  template:
    metadata:
      labels:
        app: blog-delivery
    spec:
      containers:
        - name: blog-delivery
          image: bigdahn/blog-delivery
