infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-auth
  template:
    metadata:
      labels:
        app: blog-auth
    spec:
      containers:
        - name: blog-auth
          image: bigdahn/blog-auth
---
apiVersion: v1
kind: Service
metadata:
  name: blog-auth-srv
spec:
  selector:
    app: blog-auth
  ports:
    - name: blog-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
