infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-comment
  template:
    metadata:
      labels:
        app: blog-comment
    spec:
      containers:
        - name: blog-comment
          image: bigdahn/blog-comment
---
apiVersion: v1
kind: Service
metadata:
  name: blog-comment-srv
spec:
  selector:
    app: blog-comment
  ports:
    - name: blog-comment
      protocol: TCP
      port: 3000
      targetPort: 3000
