infra/k8s/comment-mong-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-comment-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-comment-mongo
  template:
    metadata:
      labels:
        app: blog-comment-mongo
    spec:
      containers:
        - name: blog-comment-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: blog-comment-mongo-srv
spec:
  selector:
    app: blog-comment-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27107
      targetPort: 27017
