infra/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-post
  template:
    metadata:
      labels:
        app: blog-post
    spec:
      containers:
        - name: blog-post
          image: bigdahn/blog-post
---
apiVersion: v1
kind: Service
metadata:
  name: blog-post-srv
spec:
  selector:
    app: blog-post
  ports:
    - name: blog-post
      protocol: TCP
      port: 3000
      targetPort: 3000
